--- a/static/styles/aisformsCommon.css
+++ b/static/styles/aisformsCommon.css
@@ -1932,9 +1932,6 @@ div#buildAndInstance {
   color: #e6e6e6;
   font-style: normal;
 }
-#Header #buildAndInstance  .instance {
-  color: #999;
-}
 .brand .name:after {
   content: " |";
   color: #FFD590;
